BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Budget_BMS_CORE__c.object
<CustomObject>
    <description>BMS Global: Budget Management Object for Global Events Management</description>
    <fields>
        <fullName>Amount_Spent_BMS__c</fullName>
        <label>Amount Spent</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Amount_BMS__c</fullName>
        <label>Budget Amount</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Description_BMS__c</fullName>
        <label>Budget Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Source_Country_BMS_CORE__c</fullName>
        <label>Budget Source Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Code_BMS_IC__c</fullName>
        <label>WBS Element</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Budget_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Budget</label>
        <referenceTo>Budget_BMS_CORE__c</referenceTo>
        <relationshipLabel>Associated Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Budget_BMS__c</fullName>
        <formula>Budget_Amount_BMS__c -  Amount_Spent_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_BMS__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type_BMS__c</columns>
        <columns>Budget_Amount_BMS__c</columns>
        <columns>Amount_Spent_BMS__c</columns>
        <columns>Remaining_Budget_BMS__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>